infra/main.tf
provider "aws" {
  region = "us-east-1"
  #region = vars.AWS_REGION
}

# Fetch default VPC and Subnets to make the setup self-contained
data "aws_vpc" "default" {
  default = true
}

data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}

# Security Groups
resource "aws_security_group" "alb" {
  name   = "nginx-alb-sg"
  vpc_id = data.aws_vpc.default.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ecs_tasks" {
  name   = "nginx-ecs-tasks-sg"
  vpc_id = data.aws_vpc.default.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Application Load Balancer & Target Group
resource "aws_lb" "main" {
  name               = "nginx-ecs-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = data.aws_subnets.default.ids
}

resource "aws_lb_target_group" "main" {
  name        = "nginx-ecs-tg"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = data.aws_vpc.default.id
  target_type = "ip"

  health_check {
    path = "/"
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.main.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.main.arn
  }
}

# ECS Cluster & IAM Execution Role
resource "aws_ecs_cluster" "main" {
  name = "nginx-cluster"
}

resource "aws_iam_role" "ecs_execution_role" {
  name = "nginx_ecs_execution_role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [{
      Action    = "sts:AssumeRole"
      Effect    = "Allow"
      Principal = { Service = "ecs-tasks.amazonaws.com" }
    }]
  })
}

resource "aws_iam_role_policy_attachment" "ecs_execution" {
  role       = aws_iam_role.ecs_execution_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

# Task Definition
resource "aws_ecs_task_definition" "main" {
  family                   = "nginx-task"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "256"
  memory                   = "512"
  execution_role_arn       = aws_iam_role.ecs_execution_role.arn

  container_definitions = jsonencode([
    {
      name      = "nginx"
      image     = "nginx:latest"
      essential = true
      portMappings = [
        {
          containerPort = 80
          hostPort      = 80
        }
      ]
    }
  ])
}

# ECS Service (2 initial tasks)
resource "aws_ecs_service" "main" {
  name            = "nginx-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.main.arn
  desired_count   = 2
  launch_type     = "FARGATE"

  network_configuration {
    subnets          = data.aws_subnets.default.ids
    security_groups  = [aws_security_group.ecs_tasks.id]
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.main.arn
    container_name   = "nginx"
    container_port   = 80
  }

  depends_on = [aws_lb_listener.http]
}

# Auto Scaling Target (2 to 6 tasks)
resource "aws_appautoscaling_target" "ecs_target" {
  max_capacity       = 6
  min_capacity       = 2
  resource_id        = "service/${aws_ecs_cluster.main.name}/${aws_ecs_service.main.name}"
  scalable_dimension = "ecs:service:DesiredCount"
  service_namespace  = "ecs"
}

# Target Tracking Scaling Policy based on CPU
resource "aws_appautoscaling_policy" "ecs_policy_cpu" {
  name               = "nginx-cpu-autoscaling"
  policy_type        = "TargetTrackingScaling"
  resource_id        = aws_appautoscaling_target.ecs_target.resource_id
  scalable_dimension = aws_appautoscaling_target.ecs_target.scalable_dimension
  service_namespace  = aws_appautoscaling_target.ecs_target.service_namespace

  target_tracking_scaling_policy_configuration {
    predefined_metric_specification {
      predefined_metric_type = "ECSServiceAverageCPUUtilization"
    }
    target_value       = 70.0
    scale_in_cooldown  = 300
    scale_out_cooldown = 60
  }
}

# Output
output "alb_dns_name" {
  description = "The DNS name of the Application Load Balancer"
  value       = aws_lb.main.dns_name
}

/*
provider "aws" {
  region = "us-east-1"
}

# 1. Default VPC and Subnets
data "aws_vpc" "default" {
  default = true
}

data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}

# 2. Security Groups
resource "aws_security_group" "alb_sg" {
  name        = "nginx-alb-sg"
  description = "Allow HTTP inbound to ALB"
  vpc_id      = data.aws_vpc.default.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ecs_tasks_sg" {
  name        = "nginx-ecs-tasks-sg"
  description = "Allow inbound traffic from ALB only"
  vpc_id      = data.aws_vpc.default.id
  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# 3. Application Load Balancer & Target Group

resource "aws_lb" "main" {

  name               = "nginx-ecs-alb"

  internal           = false

  load_balancer_type = "application"

  security_groups    = [aws_security_group.alb_sg.id]

  subnets            = data.aws_subnets.default.ids

}

resource "aws_lb_target_group" "app" {

  name        = "nginx-ecs-tg"

  port        = 80

  protocol    = "HTTP"

  vpc_id      = data.aws_vpc.default.id

  target_type = "ip"

  health_check {

    path                = "/"

    healthy_threshold   = 2

    unhealthy_threshold = 10

    timeout             = 5

    interval            = 30

    matcher             = "200"

  }

}

resource "aws_lb_listener" "front_end" {

  load_balancer_arn = aws_lb.main.arn

  port              = "80"

  protocol          = "HTTP"

  default_action {

    type             = "forward"

    target_group_arn = aws_lb_target_group.app.arn

  }

}

# 4. ECS Cluster, Task Definition, and Service

resource "aws_ecs_cluster" "main" {

  name = "nginx-cluster"

}

resource "aws_cloudwatch_log_group" "ecs" {

  name              = "/ecs/nginx-app"

  retention_in_days = 1

}

resource "aws_ecs_task_definition" "app" {

  family                   = "nginx-app"

  network_mode             = "awsvpc"

  requires_compatibilities = ["FARGATE"]

  cpu                      = "256"

  memory                   = "512"

  execution_role_arn       = aws_iam_role.ecs_execution_role.arn

  container_definitions = jsonencode([

    {

      name      = "nginx"

      image     = "nginx:latest"

      essential = true

      portMappings = [

        {

          containerPort = 80

          hostPort      = 80

        }

      ]

      logConfiguration = {

        logDriver = "awslogs"

        options = {

          "awslogs-group"         = aws_cloudwatch_log_group.ecs.name

          "awslogs-region"        = "us-east-1"

          "awslogs-stream-prefix" = "ecs"

        }

      }

    }

  ])

}

resource "aws_ecs_service" "main" {

  name            = "nginx-service"

  cluster         = aws_ecs_cluster.main.id

  task_definition = aws_ecs_task_definition.app.arn

  desired_count   = 2

  launch_type     = "FARGATE"

  network_configuration {

    security_groups  = [aws_security_group.ecs_tasks_sg.id]

    subnets          = data.aws_subnets.default.ids

    assign_public_ip = true

  }

  load_balancer {

    target_group_arn = aws_lb_target_group.app.arn

    container_name   = "nginx"

    container_port   = 80

  }

  depends_on = [aws_lb_listener.front_end]

  lifecycle {

    ignore_changes = [desired_count]

  }

}

# 5. IAM Roles for ECS Fargate

resource "aws_iam_role" "ecs_execution_role" {

  name = "nginx_ecs_execution_role"

  assume_role_policy = jsonencode({

    Version = "2012-10-17"

    Statement = [

      {

        Action = "sts:AssumeRole"

        Effect = "Allow"

        Principal = {

          Service = "ecs-tasks.amazonaws.com"

        }

      }

    ]

  })

}

resource "aws_iam_role_policy_attachment" "ecs_execution_role_policy" {

  role       = aws_iam_role.ecs_execution_role.name

  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"

}

resource "aws_appautoscaling_target" "ecs_target" {

  max_capacity       = 6

  min_capacity       = 2

  resource_id        = "service/${aws_ecs_cluster.main.name}/${aws_ecs_service.main.name}"

  scalable_dimension = "ecs:service:DesiredCount"

  service_namespace  = "ecs"

}

resource "aws_appautoscaling_policy" "ecs_policy_cpu" {

  name               = "cpu-auto-scaling"

  policy_type        = "TargetTrackingScaling"

  resource_id        = aws_appautoscaling_target.ecs_target.resource_id

  scalable_dimension = aws_appautoscaling_target.ecs_target.scalable_dimension

  service_namespace  = aws_appautoscaling_target.ecs_target.service_namespace

  target_tracking_scaling_policy_configuration {

    predefined_metric_specification {

      predefined_metric_type = "ECSServiceAverageCPUUtilization"

    }

    target_value       = 75.0

    scale_in_cooldown  = 300

    scale_out_cooldown = 60

  }

}

# 7. Output

output "alb_dns_name" {

  description = "The DNS name of the application load balancer"

  value       = aws_lb.main.dns_name

}
*/
